src/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@300;500;700&family=Noto+Sans+TC:wght@400;700&family=Quicksand:wght@300;500;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --cc-bg: #f5f5f5;
  --c-text: #111827;
}

html.dark {
  --c-bg: #202023;
  --c-text: rgba(255, 255, 255, 0.92);
}

html {
  color: var(--c-text);
  background-color: var(--c-bg);
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 0.15s;
}

body {
  min-height: 100%;
  font-family: Quicksand, 'Noto Sans TC', -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica,
    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

@layer base {
  .nav {
    @apply flex items-center gap-1 overflow-hidden;
  }
  .navItem {
    @apply cursor-pointer p-2 text-base opacity-70 outline-none transition-opacity hover:opacity-100;
  }
}

